--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ Medium	            md	        ≥768px
 Large	            lg	        ≥992px
 Extra large	        xl	        ≥1200px
 Extra extra large	xxl	        ≥1400px */
+
+@media (min-width: 992px) { 
+    .alto {
+    height: 100vh;
+}}
+
