--- a/style.css
+++ b/style.css
@@ -4,8 +4,14 @@ Large	            lg	        ≥992px
 Extra large	        xl	        ≥1200px
 Extra extra large	xxl	        ≥1400px */
 
-@media (min-width: 992px) { 
-    .alto {
+@media (min-width: 992px) {
+  .alto {
     height: 100vh;
-}}
+  }
+}
 
+@media (max-width: 767px) {
+  .margen-arriba {
+    margin-top: 5%;
+  }
+}
